// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormConfigMultimedia should allow excluding "required" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      <Connect(Translate)>
        Name
      </Connect(Translate)>
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown without the label.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown using all the width available.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      <Connect(Translate)>
        This property will appear in the library cards as part of the basic info.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        <Connect(Translate)>
          Style
        </Connect(Translate)>
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          <Connect(Translate)>
            Fit
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fit description"
        >
          will show the entire media inside the container.
        </Connect(Translate)>
        <br />
        <b>
          <Connect(Translate)>
            Fill
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fill description"
        >
          will attempt to fill the container, using its entire width. In cards, cropping is likely to occur.
        </Connect(Translate)>
      </p>
    </div>
  </div>
  <Connect(SharedProperties)
    index={0}
  />
</div>
`;

exports[`FormConfigMultimedia should allow excluding "show in card" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      <Connect(Translate)>
        Name
      </Connect(Translate)>
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown without the label.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown using all the width available.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      <Connect(Translate)
        translationKey="empty property tip"
      >
        You won't be able to save an entity if this property is empty.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        <Connect(Translate)>
          Style
        </Connect(Translate)>
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          <Connect(Translate)>
            Fit
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fit description"
        >
          will show the entire media inside the container.
        </Connect(Translate)>
        <br />
        <b>
          <Connect(Translate)>
            Fill
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fill description"
        >
          will attempt to fill the container, using its entire width. In cards, cropping is likely to occur.
        </Connect(Translate)>
      </p>
    </div>
  </div>
  <Connect(SharedProperties)
    index={0}
  />
</div>
`;

exports[`FormConfigMultimedia should allow excluding "style" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      <Connect(Translate)>
        Name
      </Connect(Translate)>
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown without the label.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown using all the width available.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      <Connect(Translate)
        translationKey="empty property tip"
      >
        You won't be able to save an entity if this property is empty.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      <Connect(Translate)>
        This property will appear in the library cards as part of the basic info.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <Connect(SharedProperties)
    index={0}
  />
</div>
`;

exports[`FormConfigMultimedia should allow setting a help text 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      <Connect(Translate)>
        Name
      </Connect(Translate)>
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <div
    className="protip"
  >
    <Connect(Icon)
      icon="lightbulb"
    />
    <span>
      Some help text
    </span>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown without the label.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown using all the width available.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      <Connect(Translate)
        translationKey="empty property tip"
      >
        You won't be able to save an entity if this property is empty.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      <Connect(Translate)>
        This property will appear in the library cards as part of the basic info.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        <Connect(Translate)>
          Style
        </Connect(Translate)>
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          <Connect(Translate)>
            Fit
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fit description"
        >
          will show the entire media inside the container.
        </Connect(Translate)>
        <br />
        <b>
          <Connect(Translate)>
            Fill
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fill description"
        >
          will attempt to fill the container, using its entire width. In cards, cropping is likely to occur.
        </Connect(Translate)>
      </p>
    </div>
  </div>
  <Connect(SharedProperties)
    index={0}
  />
</div>
`;

exports[`FormConfigMultimedia should hold show label, show in card and select card style type options by default 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      <Connect(Translate)>
        Name
      </Connect(Translate)>
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown without the label.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      <Connect(Translate)>
        This property will be shown using all the width available.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      <Connect(Translate)
        translationKey="empty property tip"
      >
        You won't be able to save an entity if this property is empty.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      <Connect(Translate)>
        This property will appear in the library cards as part of the basic info.
      </Connect(Translate)>
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        <Connect(Translate)>
          Style
        </Connect(Translate)>
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          <Connect(Translate)>
            Fit
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fit description"
        >
          will show the entire media inside the container.
        </Connect(Translate)>
        <br />
        <b>
          <Connect(Translate)>
            Fill
          </Connect(Translate)>
        </b>
         
        <Connect(Translate)
          translationKey="Multimedia fill description"
        >
          will attempt to fill the container, using its entire width. In cards, cropping is likely to occur.
        </Connect(Translate)>
      </p>
    </div>
  </div>
  <Connect(SharedProperties)
    index={0}
  />
</div>
`;
